[package]
name = "tools"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.4"
csv = "1.3.1"
derive_more = { version = "2.0.1", features = ["add", "sum"] }
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
sysinfo = "0.35.1"

tokio = { version = "1", features = ["full"] }
aws-config = { version = "1.6.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.85.0"
bytesize = "2.0.1"
human_format = "1.1.0"
regex = "1.11.1"
